parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMPARE_OPERATOR
    DIVIDE
    ELSE
    FOR
    GREATER_THAN
    GREATER_THAN_OR_EQUALS
    IF
    IS_DIFFERENT
    IS_EQUALS
    LESS_THAN
    LESS_THAN_OR_EQUALS
    MAIN
    NOT
    OPERATOR
    PRINTLN
    REST
    RETURN
    SCANF
    SPECIAL_SYMBOL
    TIMES
    WHILE

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracao
Rule 2     declaracao -> declaracao_variavel
Rule 3     declaracao -> declaracao_funcao
Rule 4     declaracao -> declaracao_estrutura
Rule 5     declaracao -> declaracao declaracao
Rule 6     declaracao -> COMMENT
Rule 7     declaracao -> <empty>
Rule 8     declaracao_variavel -> tipo ID PONTO_VIRGULA
Rule 9     declaracao_variavel -> tipo ID EQUAL expressao PONTO_VIRGULA
Rule 10    declaracao_variavel -> ID PLUS PLUS PONTO_VIRGULA
Rule 11    declaracao_variavel -> ID MINUS MINUS PONTO_VIRGULA
Rule 12    declaracao_funcao -> tipo ID PAREN_ABERTO parametros PAREN_FECHADO bloco
Rule 13    declaracao_funcao -> VOID ID PAREN_ABERTO parametros PAREN_FECHADO bloco
Rule 14    declaracao_estrutura -> <empty>
Rule 15    tipo -> INT
Rule 16    tipo -> STRING
Rule 17    tipo -> BOOLEAN
Rule 18    tipo -> DOUBLE
Rule 19    tipo -> CHAR
Rule 20    tipo -> FLOAT
Rule 21    expressao -> atribuicao
Rule 22    atribuicao -> NUMBER_DEC
Rule 23    atribuicao -> NUMBER_INT
Rule 24    atribuicao -> TYPE_STRING
Rule 25    atribuicao -> TYPE_BOOLEAN
Rule 26    atribuicao -> ID
Rule 27    atribuicao -> ID EQUAL expressao
Rule 28    atribuicao -> ID PLUS_EQUAL expressao
Rule 29    atribuicao -> ID MINUS_EQUAL expressao
Rule 30    atribuicao -> ID TIMES_EQUAL expressao
Rule 31    atribuicao -> ID DIVIDE_EQUAL expressao
Rule 32    atribuicao -> ID REST_EQUAL expressao
Rule 33    atribuicao -> ID AND EQUAL expressao
Rule 34    atribuicao -> ID OR EQUAL expressao
Rule 35    parametros -> parametro
Rule 36    parametros -> parametro VIRGULA parametros
Rule 37    parametros -> <empty>
Rule 38    parametro -> tipo ID
Rule 39    parametro -> tipo ID CHAVE_ABERTA CHAVE_FECHADA
Rule 40    bloco -> COLCHETE_ABERTO declaracao COLCHETE_FECHADO

Terminals, with rules where they appear

AND                  : 33
BOOLEAN              : 17
CHAR                 : 19
CHAVE_ABERTA         : 39
CHAVE_FECHADA        : 39
COLCHETE_ABERTO      : 40
COLCHETE_FECHADO     : 40
COMMENT              : 6
COMPARE_OPERATOR     : 
DIVIDE               : 
DIVIDE_EQUAL         : 31
DOUBLE               : 18
ELSE                 : 
EQUAL                : 9 27 33 34
FLOAT                : 20
FOR                  : 
GREATER_THAN         : 
GREATER_THAN_OR_EQUALS : 
ID                   : 8 9 10 11 12 13 26 27 28 29 30 31 32 33 34 38 39
IF                   : 
INT                  : 15
IS_DIFFERENT         : 
IS_EQUALS            : 
LESS_THAN            : 
LESS_THAN_OR_EQUALS  : 
MAIN                 : 
MINUS                : 11 11
MINUS_EQUAL          : 29
NOT                  : 
NUMBER_DEC           : 22
NUMBER_INT           : 23
OPERATOR             : 
OR                   : 34
PAREN_ABERTO         : 12 13
PAREN_FECHADO        : 12 13
PLUS                 : 10 10
PLUS_EQUAL           : 28
PONTO_VIRGULA        : 8 9 10 11
PRINTLN              : 
REST                 : 
REST_EQUAL           : 32
RETURN               : 
SCANF                : 
SPECIAL_SYMBOL       : 
STRING               : 16
TIMES                : 
TIMES_EQUAL          : 30
TYPE_BOOLEAN         : 25
TYPE_STRING          : 24
VIRGULA              : 36
VOID                 : 13
WHILE                : 
error                : 

Nonterminals, with rules where they appear

atribuicao           : 21
bloco                : 12 13
declaracao           : 1 5 5 40
declaracao_estrutura : 4
declaracao_funcao    : 3
declaracao_variavel  : 2
expressao            : 9 27 28 29 30 31 32 33 34
parametro            : 35 36
parametros           : 12 13 36
programa             : 0
tipo                 : 8 9 12 38 39

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracao
    (2) declaracao -> . declaracao_variavel
    (3) declaracao -> . declaracao_funcao
    (4) declaracao -> . declaracao_estrutura
    (5) declaracao -> . declaracao declaracao
    (6) declaracao -> . COMMENT
    (7) declaracao -> .
    (8) declaracao_variavel -> . tipo ID PONTO_VIRGULA
    (9) declaracao_variavel -> . tipo ID EQUAL expressao PONTO_VIRGULA
    (10) declaracao_variavel -> . ID PLUS PLUS PONTO_VIRGULA
    (11) declaracao_variavel -> . ID MINUS MINUS PONTO_VIRGULA
    (12) declaracao_funcao -> . tipo ID PAREN_ABERTO parametros PAREN_FECHADO bloco
    (13) declaracao_funcao -> . VOID ID PAREN_ABERTO parametros PAREN_FECHADO bloco
    (14) declaracao_estrutura -> .
    (15) tipo -> . INT
    (16) tipo -> . STRING
    (17) tipo -> . BOOLEAN
    (18) tipo -> . DOUBLE
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! reduce/reduce conflict for INT resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for STRING resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for DOUBLE resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for CHAR resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for FLOAT resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for $end resolved using rule 7 (declaracao -> .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    COMMENT         shift and go to state 6
    $end            reduce using rule 7 (declaracao -> .)
    ID              shift and go to state 8
    VOID            shift and go to state 9
    INT             shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    FLOAT           shift and go to state 15

  ! COMMENT         [ reduce using rule 7 (declaracao -> .) ]
  ! ID              [ reduce using rule 7 (declaracao -> .) ]
  ! VOID            [ reduce using rule 7 (declaracao -> .) ]
  ! INT             [ reduce using rule 7 (declaracao -> .) ]
  ! STRING          [ reduce using rule 7 (declaracao -> .) ]
  ! BOOLEAN         [ reduce using rule 7 (declaracao -> .) ]
  ! DOUBLE          [ reduce using rule 7 (declaracao -> .) ]
  ! CHAR            [ reduce using rule 7 (declaracao -> .) ]
  ! FLOAT           [ reduce using rule 7 (declaracao -> .) ]
  ! COMMENT         [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! ID              [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! VOID            [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! INT             [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! STRING          [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! BOOLEAN         [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! DOUBLE          [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! CHAR            [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! FLOAT           [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! $end            [ reduce using rule 14 (declaracao_estrutura -> .) ]

    programa                       shift and go to state 1
    declaracao                     shift and go to state 2
    declaracao_variavel            shift and go to state 3
    declaracao_funcao              shift and go to state 4
    declaracao_estrutura           shift and go to state 5
    tipo                           shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracao .
    (5) declaracao -> declaracao . declaracao
    (2) declaracao -> . declaracao_variavel
    (3) declaracao -> . declaracao_funcao
    (4) declaracao -> . declaracao_estrutura
    (5) declaracao -> . declaracao declaracao
    (6) declaracao -> . COMMENT
    (7) declaracao -> .
    (8) declaracao_variavel -> . tipo ID PONTO_VIRGULA
    (9) declaracao_variavel -> . tipo ID EQUAL expressao PONTO_VIRGULA
    (10) declaracao_variavel -> . ID PLUS PLUS PONTO_VIRGULA
    (11) declaracao_variavel -> . ID MINUS MINUS PONTO_VIRGULA
    (12) declaracao_funcao -> . tipo ID PAREN_ABERTO parametros PAREN_FECHADO bloco
    (13) declaracao_funcao -> . VOID ID PAREN_ABERTO parametros PAREN_FECHADO bloco
    (14) declaracao_estrutura -> .
    (15) tipo -> . INT
    (16) tipo -> . STRING
    (17) tipo -> . BOOLEAN
    (18) tipo -> . DOUBLE
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT

  ! shift/reduce conflict for COMMENT resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (programa -> declaracao .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! reduce/reduce conflict for INT resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for STRING resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for DOUBLE resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for CHAR resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for FLOAT resolved using rule 7 (declaracao -> .)
  ! reduce/reduce conflict for $end resolved using rule 1 (programa -> declaracao .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    $end            reduce using rule 1 (programa -> declaracao .)
    COMMENT         shift and go to state 6
    ID              shift and go to state 8
    VOID            shift and go to state 9
    INT             shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    FLOAT           shift and go to state 15

  ! COMMENT         [ reduce using rule 7 (declaracao -> .) ]
  ! ID              [ reduce using rule 7 (declaracao -> .) ]
  ! VOID            [ reduce using rule 7 (declaracao -> .) ]
  ! INT             [ reduce using rule 7 (declaracao -> .) ]
  ! STRING          [ reduce using rule 7 (declaracao -> .) ]
  ! BOOLEAN         [ reduce using rule 7 (declaracao -> .) ]
  ! DOUBLE          [ reduce using rule 7 (declaracao -> .) ]
  ! CHAR            [ reduce using rule 7 (declaracao -> .) ]
  ! FLOAT           [ reduce using rule 7 (declaracao -> .) ]
  ! $end            [ reduce using rule 7 (declaracao -> .) ]
  ! COMMENT         [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! ID              [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! VOID            [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! INT             [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! STRING          [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! BOOLEAN         [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! DOUBLE          [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! CHAR            [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! FLOAT           [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! $end            [ reduce using rule 14 (declaracao_estrutura -> .) ]

    declaracao                     shift and go to state 16
    declaracao_variavel            shift and go to state 3
    declaracao_funcao              shift and go to state 4
    declaracao_estrutura           shift and go to state 5
    tipo                           shift and go to state 7

state 3

    (2) declaracao -> declaracao_variavel .

    COMMENT         reduce using rule 2 (declaracao -> declaracao_variavel .)
    ID              reduce using rule 2 (declaracao -> declaracao_variavel .)
    VOID            reduce using rule 2 (declaracao -> declaracao_variavel .)
    INT             reduce using rule 2 (declaracao -> declaracao_variavel .)
    STRING          reduce using rule 2 (declaracao -> declaracao_variavel .)
    BOOLEAN         reduce using rule 2 (declaracao -> declaracao_variavel .)
    DOUBLE          reduce using rule 2 (declaracao -> declaracao_variavel .)
    CHAR            reduce using rule 2 (declaracao -> declaracao_variavel .)
    FLOAT           reduce using rule 2 (declaracao -> declaracao_variavel .)
    $end            reduce using rule 2 (declaracao -> declaracao_variavel .)
    COLCHETE_FECHADO reduce using rule 2 (declaracao -> declaracao_variavel .)


state 4

    (3) declaracao -> declaracao_funcao .

    COMMENT         reduce using rule 3 (declaracao -> declaracao_funcao .)
    ID              reduce using rule 3 (declaracao -> declaracao_funcao .)
    VOID            reduce using rule 3 (declaracao -> declaracao_funcao .)
    INT             reduce using rule 3 (declaracao -> declaracao_funcao .)
    STRING          reduce using rule 3 (declaracao -> declaracao_funcao .)
    BOOLEAN         reduce using rule 3 (declaracao -> declaracao_funcao .)
    DOUBLE          reduce using rule 3 (declaracao -> declaracao_funcao .)
    CHAR            reduce using rule 3 (declaracao -> declaracao_funcao .)
    FLOAT           reduce using rule 3 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 3 (declaracao -> declaracao_funcao .)
    COLCHETE_FECHADO reduce using rule 3 (declaracao -> declaracao_funcao .)


state 5

    (4) declaracao -> declaracao_estrutura .

    COMMENT         reduce using rule 4 (declaracao -> declaracao_estrutura .)
    ID              reduce using rule 4 (declaracao -> declaracao_estrutura .)
    VOID            reduce using rule 4 (declaracao -> declaracao_estrutura .)
    INT             reduce using rule 4 (declaracao -> declaracao_estrutura .)
    STRING          reduce using rule 4 (declaracao -> declaracao_estrutura .)
    BOOLEAN         reduce using rule 4 (declaracao -> declaracao_estrutura .)
    DOUBLE          reduce using rule 4 (declaracao -> declaracao_estrutura .)
    CHAR            reduce using rule 4 (declaracao -> declaracao_estrutura .)
    FLOAT           reduce using rule 4 (declaracao -> declaracao_estrutura .)
    $end            reduce using rule 4 (declaracao -> declaracao_estrutura .)
    COLCHETE_FECHADO reduce using rule 4 (declaracao -> declaracao_estrutura .)


state 6

    (6) declaracao -> COMMENT .

    COMMENT         reduce using rule 6 (declaracao -> COMMENT .)
    ID              reduce using rule 6 (declaracao -> COMMENT .)
    VOID            reduce using rule 6 (declaracao -> COMMENT .)
    INT             reduce using rule 6 (declaracao -> COMMENT .)
    STRING          reduce using rule 6 (declaracao -> COMMENT .)
    BOOLEAN         reduce using rule 6 (declaracao -> COMMENT .)
    DOUBLE          reduce using rule 6 (declaracao -> COMMENT .)
    CHAR            reduce using rule 6 (declaracao -> COMMENT .)
    FLOAT           reduce using rule 6 (declaracao -> COMMENT .)
    $end            reduce using rule 6 (declaracao -> COMMENT .)
    COLCHETE_FECHADO reduce using rule 6 (declaracao -> COMMENT .)


state 7

    (8) declaracao_variavel -> tipo . ID PONTO_VIRGULA
    (9) declaracao_variavel -> tipo . ID EQUAL expressao PONTO_VIRGULA
    (12) declaracao_funcao -> tipo . ID PAREN_ABERTO parametros PAREN_FECHADO bloco

    ID              shift and go to state 17


state 8

    (10) declaracao_variavel -> ID . PLUS PLUS PONTO_VIRGULA
    (11) declaracao_variavel -> ID . MINUS MINUS PONTO_VIRGULA

    PLUS            shift and go to state 18
    MINUS           shift and go to state 19


state 9

    (13) declaracao_funcao -> VOID . ID PAREN_ABERTO parametros PAREN_FECHADO bloco

    ID              shift and go to state 20


state 10

    (15) tipo -> INT .

    ID              reduce using rule 15 (tipo -> INT .)


state 11

    (16) tipo -> STRING .

    ID              reduce using rule 16 (tipo -> STRING .)


state 12

    (17) tipo -> BOOLEAN .

    ID              reduce using rule 17 (tipo -> BOOLEAN .)


state 13

    (18) tipo -> DOUBLE .

    ID              reduce using rule 18 (tipo -> DOUBLE .)


state 14

    (19) tipo -> CHAR .

    ID              reduce using rule 19 (tipo -> CHAR .)


state 15

    (20) tipo -> FLOAT .

    ID              reduce using rule 20 (tipo -> FLOAT .)


state 16

    (5) declaracao -> declaracao declaracao .
    (5) declaracao -> declaracao . declaracao
    (2) declaracao -> . declaracao_variavel
    (3) declaracao -> . declaracao_funcao
    (4) declaracao -> . declaracao_estrutura
    (5) declaracao -> . declaracao declaracao
    (6) declaracao -> . COMMENT
    (7) declaracao -> .
    (8) declaracao_variavel -> . tipo ID PONTO_VIRGULA
    (9) declaracao_variavel -> . tipo ID EQUAL expressao PONTO_VIRGULA
    (10) declaracao_variavel -> . ID PLUS PLUS PONTO_VIRGULA
    (11) declaracao_variavel -> . ID MINUS MINUS PONTO_VIRGULA
    (12) declaracao_funcao -> . tipo ID PAREN_ABERTO parametros PAREN_FECHADO bloco
    (13) declaracao_funcao -> . VOID ID PAREN_ABERTO parametros PAREN_FECHADO bloco
    (14) declaracao_estrutura -> .
    (15) tipo -> . INT
    (16) tipo -> . STRING
    (17) tipo -> . BOOLEAN
    (18) tipo -> . DOUBLE
    (19) tipo -> . CHAR
    (20) tipo -> . FLOAT

  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! reduce/reduce conflict for ID resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for VOID resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for INT resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for STRING resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for DOUBLE resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for CHAR resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for FLOAT resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for $end resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for COLCHETE_FECHADO resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! reduce/reduce conflict for INT resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for STRING resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for DOUBLE resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for CHAR resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for FLOAT resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for $end resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! reduce/reduce conflict for COLCHETE_FECHADO resolved using rule 5 (declaracao -> declaracao declaracao .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for DOUBLE resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    $end            reduce using rule 5 (declaracao -> declaracao declaracao .)
    COLCHETE_FECHADO reduce using rule 5 (declaracao -> declaracao declaracao .)
    COMMENT         shift and go to state 6
    ID              shift and go to state 8
    VOID            shift and go to state 9
    INT             shift and go to state 10
    STRING          shift and go to state 11
    BOOLEAN         shift and go to state 12
    DOUBLE          shift and go to state 13
    CHAR            shift and go to state 14
    FLOAT           shift and go to state 15

  ! COMMENT         [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! ID              [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! VOID            [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! INT             [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! STRING          [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! BOOLEAN         [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! DOUBLE          [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! CHAR            [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! FLOAT           [ reduce using rule 5 (declaracao -> declaracao declaracao .) ]
  ! COMMENT         [ reduce using rule 7 (declaracao -> .) ]
  ! ID              [ reduce using rule 7 (declaracao -> .) ]
  ! VOID            [ reduce using rule 7 (declaracao -> .) ]
  ! INT             [ reduce using rule 7 (declaracao -> .) ]
  ! STRING          [ reduce using rule 7 (declaracao -> .) ]
  ! BOOLEAN         [ reduce using rule 7 (declaracao -> .) ]
  ! DOUBLE          [ reduce using rule 7 (declaracao -> .) ]
  ! CHAR            [ reduce using rule 7 (declaracao -> .) ]
  ! FLOAT           [ reduce using rule 7 (declaracao -> .) ]
  ! $end            [ reduce using rule 7 (declaracao -> .) ]
  ! COLCHETE_FECHADO [ reduce using rule 7 (declaracao -> .) ]
  ! COMMENT         [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! ID              [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! VOID            [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! INT             [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! STRING          [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! BOOLEAN         [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! DOUBLE          [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! CHAR            [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! FLOAT           [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! $end            [ reduce using rule 14 (declaracao_estrutura -> .) ]
  ! COLCHETE_FECHADO [ reduce using rule 14 (declaracao_estrutura -> .) ]

    declaracao                     shift and go to state 16
    declaracao_variavel            shift and go to state 3
    declaracao_funcao              shift and go to state 4
    declaracao_estrutura           shift and go to state 5
    tipo                           shift and go to state 7

state 17

    (8) declaracao_variavel -> tipo ID . PONTO_VIRGULA
    (9) declaracao_variavel -> tipo ID . EQUAL expressao PONTO_VIRGULA
    (12) declaracao_funcao -> tipo ID . PAREN_ABERTO parametros PAREN_FECHADO bloco

    PONTO_VIRGULA   shift and go to state 21
    EQUAL           shift and go to state 22
    PAREN_ABERTO    shift and go to state 23


state 18

    (10) declaracao_variavel -> ID PLUS . PLUS PONTO_VIRGULA

    PLUS            shift and go to state 24


state 19

    (11) declaracao_variavel -> ID MINUS . MINUS PONTO_VIRGULA

    MINUS           shift and go to state 25


state 20

    (13) declaracao_funcao -> VOID ID . PAREN_ABERTO parametros PAREN_FECHADO bloco

    PAREN_ABERTO    shift and go to state 26


state 21

    (8) declaracao_variavel -> tipo ID PONTO_VIRGULA .

    COMMENT         reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    ID              reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    VOID            reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    INT             reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    STRING          reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    BOOLEAN         reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    DOUBLE          reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    CHAR            reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    FLOAT           reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    $end            reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)
    COLCHETE_FECHADO reduce using rule 8 (declaracao_variavel -> tipo ID PONTO_VIRGULA .)


state 22

    (9) declaracao_variavel -> tipo ID EQUAL . expressao PONTO_VIRGULA
    (21) expressao -> . atribuicao
    (22) atribuicao -> . NUMBER_DEC
    (23) atribuicao -> . NUMBER_INT
    (24) atribuicao -> . TYPE_STRING
    (25) atribuicao -> . TYPE_BOOLEAN
    (26) atribuicao -> . ID
    (27) atribuicao -> . ID EQUAL expressao
    (28) atribuicao -> . ID PLUS_EQUAL expressao
    (29) atribuicao -> . ID MINUS_EQUAL expressao
    (30) atribuicao -> . ID TIMES_EQUAL expressao
    (31) atribuicao -> . ID DIVIDE_EQUAL expressao
    (32) atribuicao -> . ID REST_EQUAL expressao
    (33) atribuicao -> . ID AND EQUAL expressao
    (34) atribuicao -> . ID OR EQUAL expressao
